--- a/package.json
+++ b/package.json
@@ -1,55 +1,46 @@
 {
   "name": "@osn/icons",
-  "version": "0.1.0",
-  "private": false,
-  "main": "dist/index.js",
-  "module": "dist/index.js",
   "keywords": [
     "react",
     "components",
     "ui"
   ],
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react-scripts": "5.0.1",
-    "@babel/polyfill": "^7.12.1",
-    "@noble/hashes": "^1.0.0",
-    "core-js": "^3.21.1",
-    "micro-base": "^0.10.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "web-vitals": "^2.1.4"
+  "version": "0.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
+  "type": "module",
+  "author": "OpenSquare <https://www.opensquare.network/>",
+  "sideEffects": false,
+  "license": "Apache-2.0",
+  "licenses": [
+    {
+      "type": "Apache-2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0"
+    }
+  ],
+  "files": [
+    "**/*.js",
+    "**/*.ts",
+    "**/*.svg"
+  ],
+  "scripts": {
+    "gen": "node gen.mjs",
+    "prepublishOnly": "npm run gen"
   },
   "devDependencies": {
-    "@babel/cli": "^7.17.3",
-    "@babel/core": "^7.17.5",
-    "@babel/preset-env": "^7.16.11",
-    "react-scripts": "5.0.1"
+    "@svgr/cli": "^8.0.1",
+    "@svgr/core": "^8.0.0",
+    "@svgr/plugin-jsx": "^8.0.1",
+    "@svgr/plugin-prettier": "^8.0.1",
+    "@svgr/plugin-svgo": "^8.0.1",
+    "@types/react": "^18.2.12",
+    "react": "^18.2.0",
+    "typescript": "^5.1.3"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "rm -rf dist && NODE_ENV=production babel src/icons --out-dir dist --copy-files",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  "dependencies": {
+    "@2nthony/prettier-config": "^1.0.2",
+    "prettier": "^2.8.8"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "packageManager": "yarn@3.6.0"
 }
