--- a/package.json
+++ b/package.json
@@ -29,18 +29,16 @@
     "prepublishOnly": "npm run gen"
   },
   "devDependencies": {
+    "@2nthony/prettier-config": "^1.0.2",
     "@svgr/cli": "^8.0.1",
     "@svgr/core": "^8.0.0",
     "@svgr/plugin-jsx": "^8.0.1",
     "@svgr/plugin-prettier": "^8.0.1",
     "@svgr/plugin-svgo": "^8.0.1",
     "@types/react": "^18.2.12",
+    "prettier": "^2.8.8",
     "react": "^18.2.0",
     "typescript": "^5.1.3"
-  },
-  "dependencies": {
-    "@2nthony/prettier-config": "^1.0.2",
-    "prettier": "^2.8.8"
   },
   "packageManager": "yarn@3.6.0"
 }
