--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react": "^18.2.12",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
+    "tsup": "^6.7.0",
     "typescript": "^5.1.3"
   },
   "packageManager": "yarn@3.6.0"
