--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,3 +32,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+      - name: Notify update to group
+        run: node notify.mjs
+        env:
+          WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
