--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/react": "^18.2.12",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
+    "redaxios": "^0.5.1",
     "tsup": "^6.7.0",
     "typescript": "^5.1.3"
   },
