--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "!/tmp"
   ],
   "scripts": {
+    "playground": "vite playground",
     "build": "node build.mjs",
     "prepublishOnly": "npm run build"
   },
@@ -38,11 +39,14 @@
     "@svgr/plugin-prettier": "^8.0.1",
     "@svgr/plugin-svgo": "^8.0.1",
     "@types/react": "^18.2.12",
+    "@vitejs/plugin-react": "^4.2.1",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "redaxios": "^0.5.1",
     "tsup": "^6.7.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "vite": "^5.0.12"
   },
   "packageManager": "yarn@3.6.0"
 }
